# smacha

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  package.xml
smacha/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml  setup.py
smacha/doc/: build.sh  build_locally.sh  build_locally_docker.sh  conf.py  index.rst  modules.rst  smacha.rst  smacha_code_generator.rst  smacha_scripts.rst  sub_scripts_and_super_scripts.rst
smacha/doc/API/: smacha.exceptions.rst  smacha.generator.rst  smacha.parser.rst  smacha.templater.rst  smacha.util.rst
smacha/doc/API/Templates/: Base.tpl.py.rst  CallbacksState.tpl.py.rst  Concurrence.tpl.py.rst  ConditionalOutcomeState.tpl.py.rst  DeleteFileState.tpl.py.rst  MsgPublisher.tpl.py.rst  MsgPublisherFactory.tpl.py.rst  MsgPublisherObserver.tpl.py.rst  ParseJointTrajectoryPoint.tpl.py.rst  ParsePointCloud.tpl.py.rst  ParsePointCloud2.tpl.py.rst  ParsePointStamped.tpl.py.rst  ParsePose.tpl.py.rst  ParsePoseArray.tpl.py.rst  ParsePoseStamped.tpl.py.rst  ParseTransformStamped.tpl.py.rst  PrintUserdataState.tpl.py.rst  PublishMsgState.tpl.py.rst  PublishObserverMsgState.tpl.py.rst  ROSBagCLIProcessRecorder.tpl.py.rst  RandomOutcomeState.tpl.py.rst  ReadTopicState.tpl.py.rst  RecordROSBagState.tpl.py.rst  ServiceState.tpl.py.rst  SimpleActionState.tpl.py.rst  SleepState.tpl.py.rst  State.tpl.py.rst  StateMachine.tpl.py.rst  TF2ListenerSingleton.tpl.py.rst  TF2ListenerState.tpl.py.rst  TransformMsgState.tpl.py.rst  Utils.tpl.py.rst  WaitForMsgState.tpl.py.rst  WriteCSVFileState.tpl.py.rst
smacha/doc/CodeGeneration/: smacha_code_generator.rst
smacha/doc/Scripting/: container_states.rst  shorthand.rst  smacha_scripts.rst  sub_scripts_and_super_scripts.rst  userdata.rst
smacha/doc/Templating/: anatomy.rst  core_api_base_templates.rst  core_api_container_templates.rst  core_api_state_templates.rst  core_api_templates.rst  inheritance.rst  macros.rst  metadata.rst  other_core_api_templates.rst  smacha_templates.rst
smacha/scripts/: contain  execute  extract  generate  help
smacha/src/smacha/: exceptions.py  generator.py  parser.py  templater.py  util.py
smacha/src/smacha/templates/: Base.tpl  Base.tpl.py  CallbacksState.tpl  CallbacksState.tpl.py  Concurrence.tpl  Concurrence.tpl.py  ConditionalOutcomeState.tpl.py  DeleteFileState.tpl.py  MsgPublisher.tpl.py  MsgPublisherFactory.tpl.py  MsgPublisherObserver.tpl.py  ParseJointTrajectoryPoint.tpl.py  ParsePointStamped.tpl.py  ParsePoseStamped.tpl.py  ParseTransformStamped.tpl.py  PrintUserdataState.tpl  PrintUserdataState.tpl.py  PublishMsgState.tpl.py  ROSBagCLIProcessRecorder.tpl.py  ROSBagRecorder.tpl.py  ROSBagRecorderObserver.tpl.py  RandomOutcomeState.tpl  RandomOutcomeState.tpl.py  RecordROSBagState.tpl.py  ServiceState.tpl  ServiceState.tpl.py  SimpleActionState.tpl  SimpleActionState.tpl.py  SleepState.tpl  SleepState.tpl.py  State.tpl  State.tpl.py  StateMachine.tpl  StateMachine.tpl.py  TF2ListenerSingleton.tpl  TF2ListenerSingleton.tpl.py  TF2ListenerState.tpl  TF2ListenerState.tpl.py  TransformMsgState.tpl.py  Utils.tpl  (+3 more)
smacha/src/templates/: SleepState.tpl.py  State.tpl.py
smacha/test/: executive_smach_tutorials_test.py  smach_executive_tutorial_config.yml  smach_executive_tutorials_generate_test.py  smacha_diff_test_examples.py  smacha_generate_test.py  smacha_test_examples.py  test_examples_config.yml
smacha/test/executive_smach_tutorials/: CMakeLists.txt  stack.xml
smacha/test/executive_smach_tutorials/smach_tutorials/: manifest.xml
smacha/test/smacha_generated_py/: test.py
smacha/test/smacha_generated_py/executive_smach_tutorials/: actionlib2_test_generate_output.py  concurrence2_generate_output.py  service_test_generate_output.py  state_machine2_generate_output.py  state_machine_nesting2_generate_output.py  state_machine_nesting2_shorthand_generate_output.py  user_data2_generate_output.py
smacha/test/smacha_generated_py/smacha_test_examples/: assigned_params_generate_output.py  callbacks.py  callbacks_generate_output.py  callbacks_shorthand_generate_output.py  hard_coded_params_generate_output.py  nesting_params_generate_output.py  nesting_params_shorthand_generate_output.py  nesting_params_with_sub_script_generate_output.py  print_userdata.py  print_userdata_shorthand_generate_output.py  random_outcomes.py  (+22 more)
smacha/test/smacha_generated_scripts/: actions_services_nesting_example_up_motion_contain_output.yml
smacha/test/smacha_test_examples/: callbacks.py  nesting_params.py  params.py  print_userdata.py  random_outcomes.py  rosbag_api_recording_2.py  rosbag_api_recording_3.py  rosbag_cli_recording_2.py  rosbag_recording_1.py  rosbag_recording_2.py  rosbag_recording_3.py  seq_concurrence_1.py  seq_concurrence_2.py  seq_concurrence_3.py  seq_nesting_1.py  seq_nesting_1_super_script_2.py  seq_nesting_2.py  seq_nesting_3.py  sleep.py
smacha_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc.yaml  setup.py
smacha_ros/doc/: build.sh  build_locally.sh  build_locally_docker.sh  conf.py  execute_sourced.sh  index.rst  modules.rst  smacha_ros.rst
smacha_ros/doc/Templating/: core_api_state_templates.rst  other_core_api_templates.rst
smacha_ros/doc/_templates/: layout.html
smacha_ros/scripts/: smacha_server
smacha_ros/srv/: Contain.srv  Extract.srv  Generate.srv
smacha_ros/test/: api_generate_test.py  executive_smach_tutorials_config.yml  executive_smach_tutorials_diff_test.py  generate.py  generate.test  hard_coded_params.yml.py  service_generate_test.py  smacha_diff_test_examples.py  test_examples_config.yml  test_generate.yml
smacha_ros/test/smacha_generated_py/: test.py
smacha_ros/test/smacha_generated_scripts/: actions_services_nesting_with_sub_scripts_example_up_motion_extract_output.yml
smacha_ros/test/smacha_test_examples/: callbacks.py  nesting_params.py  params.py  publish_msg_1.py  rosbag_api_recording_1.py  rosbag_cli_recording_1.py  rosbag_cli_recording_3.py  seq_concurrence_1.py  seq_concurrence_2.py  seq_concurrence_3.py  seq_nesting_1_super_script_2.py  sleep.py
(+308 files in other folders)
