<?xml version="1.0"?>
<package>
  <name>smacha</name>
  <version>0.0.1</version>
  <description>The smacha package</description>

  <maintainer email="barry.ridge@ijs.si">barry</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/smacha</url> -->

  <author email="barry.ridge@ijs.si">Barry Ridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-argparse</build_depend>
  <build_depend>python-ruamel.yaml</build_depend>
  <build_depend>python-jinja2</build_depend>
  <run_depend>python-argparse</run_depend>
  <run_depend>python-ruamel.yaml</run_depend>
  <run_depend>python-jinja2</run_depend>
  <run_depend>smach</run_depend>
  
  <export>
  </export>
</package>
