<?xml version="1.0"?>
<package format="2">
  <name>smacha</name>
  <version>0.0.1</version>
  <description>The smacha package</description>

  <maintainer email="barry.ridge@ijs.si">barry</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/smacha</url> -->

  <author email="barry.ridge@ijs.si">Barry Ridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>python-argparse</depend>
  <depend>python-ruamel.yaml</depend>
  <depend>python-jinja2</depend>
  <depend>smach</depend>
  
  <export>
  </export>
</package>
