<?xml version="1.0"?>
<package>
  <name>smacha_ros</name>
  <version>0.0.1</version>
  <description>The smacha_ros package</description>

  <maintainer email="barry.ridge@ijs.si">barry</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/smacha</url> -->

  <author email="barry.ridge@ijs.si">Barry Ridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <build_depend>smacha</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>smacha</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
