<?xml version="1.0"?>
<package format="2">
  <name>smacha_ros</name>
  <version>0.0.1</version>
  <description>The smacha_ros package</description>

  <maintainer email="barry.ridge@ijs.si">barry</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/smacha</url> -->

  <author email="barry.ridge@ijs.si">Barry Ridge</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>smacha</depend>
  
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <depend>python-unittest2</depend>
  <test_depend>rostest</test_depend>

  <export>
  </export>
</package>
